[package]
name = "skim-ec2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-ec2 = "0.19.0"
tokio = { version = "1", features = ["full"] }
eyre = "*"
clap = { version = "*", features = ["derive"] }
skim = "0.10.1"
crossbeam = "^0.8.2"
colored_json = "3.0.1"
serde_json = { version = "1.0.64", features = ["preserve_order"] }
shell-escape = "*"
